crates/bitnet-kernels/tests/snapshots/opencl_snapshot_tests__output_shapes__attention_config_gqa.snap
---
source: crates/bitnet-kernels/tests/opencl_snapshot_tests.rs
expression: cfg
---
AttentionConfig {
    num_heads: 32,
    num_kv_heads: 8,
    head_dim: 64,
    max_seq_len: 4096,
    causal: true,
    scale: 0.125,
}
