crates/bitnet-kernels/tests/snapshots/opencl_snapshot_tests__output_shapes__embedding_config_dimensions.snap
---
source: crates/bitnet-kernels/tests/opencl_snapshot_tests.rs
expression: cfg
---
EmbeddingConfig {
    vocab_size: 32000,
    embedding_dim: 2048,
    padding_idx: None,
}
