crates/bitnet-kernels/tests/snapshots/opencl_snapshot_tests__output_shapes__ffn_config_silu.snap
---
source: crates/bitnet-kernels/tests/opencl_snapshot_tests.rs
expression: cfg
---
FfnConfig {
    hidden_size: 2048,
    intermediate_size: 5632,
    activation: SiLU,
}
