crates/bitnet-kernels/tests/snapshots/opencl_snapshot_tests__output_shapes__kv_cache_config_memory.snap
---
source: crates/bitnet-kernels/tests/opencl_snapshot_tests.rs
expression: "format!(\"per_layer={} total={}\", cfg.memory_per_layer(), cfg.total_memory())"
---
per_layer=67108864 total=1610612736
