crates/bitnet-kernels/tests/snapshots/opencl_snapshot_tests__output_shapes__optimal_block_config_for_2048_cols.snap
---
source: crates/bitnet-kernels/tests/opencl_snapshot_tests.rs
expression: opt
---
OptimalBlockConfig {
    block_size: 256,
    layout: Qk256,
    waste_ratio: 0.0,
}
